test/invalid/exception_too_many_args.py
# Exception() with too many arguments
def main() -> None:
    e = Exception("msg1", "msg2")  # Exception() takes at most 1 argument
